adds main component

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'components/visually-hidden';
 @import 'components/body';
 @import 'components/container';
+@import 'components/logo';
+@import 'components/btn';
 @import 'components/header';
-
 @import 'components/main';
