--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ ul {
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Inter', sans-serif;
   line-height: 1;
   background-color: #F5F5F5;
 }
@@ -52,6 +52,88 @@ body {
   max-width: 1160px;
   padding: 0 15px;
   margin: 0 auto;
+}
+
+.logo__icon {
+  width: 106px;
+  height: 37px;
+}
+
+.btn {
+  padding: 6px 20px;
+  border: none;
+  color: #ffffff;
+  background: #0070A0;
+  cursor: pointer;
+  font: inherit;
+  font-size: 15px;
+  line-height: 1.6;
+  letter-spacing: 0.2px;
+}
+
+.btn--secondary {
+  color: #0070A0;
+  background: #ffffff;
+}
+
+.header {
+  padding: 20px 0;
+}
+
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__logo {
+  margin-right: 36px;
+}
+
+.header__nav-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__nav-item {
+  font-size: 15px;
+  line-height: 1.6;
+  letter-spacing: 0.2px;
+}
+
+.header__nav-item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.header__nav-link {
+  color: #33383F;
+  text-decoration: none;
+}
+
+.header__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__button:not(:last-child) {
+  margin-right: 11px;
 }
 
 .main {
