adds letter-spacing

--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
+    letter-spacing: 0.2px;
     line-height: 1;
     background-color: #F5F5F5;
 }
