--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -3,16 +3,17 @@
     border: none;
 
     color: #ffffff;
-    background: #0070A0;
+    background: $accentColor;
 
     cursor: pointer;
 
     font: inherit;
     @include fontSizeLineHeight(15px, 24px);
-    letter-spacing: 0.2px;
+
+    letter-spacing: inherit;
 
     &--secondary {
-        color: #0070A0;
+        color: $accentColor;
         background: #ffffff;
     }
 }
