--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -4,5 +4,6 @@ body {
     letter-spacing: 0.2px;
     line-height: 1;
     background-color: #F5F5F5;
+    color: $textColor;
 }
 // font-family: 'Fraunces', serif;
