--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -17,7 +17,7 @@
     &__item {
         padding: 32px 32px 40px 32px;
         // flex-basis: calc(100% / 3);
-        // flex-basis: 33.33333%;
+        flex-basis: 33.33333%;
 
         &:not(:last-child) {
             margin-right: 32px;
@@ -78,5 +78,5 @@
     &__text {
         @include fontSizeLineHeight(15px, 24px);
     }
-    
+
 }
