--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,8 @@
 @import 'components/visually-hidden';
 @import 'components/body';
 @import 'components/container';
+@import 'components/title';
+@import 'components/heading';
 @import 'components/logo';
 @import 'components/btn';
 @import 'components/header';
@@ -12,3 +14,4 @@
 @import 'components/companies';
 @import 'components/advantage';
 @import 'components/services';
+@import 'components/about';
