renamed items to the list

--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -15,9 +15,9 @@
         // margin-right: 100px;
     }
 
-    // .about__items
+    // .about__list
 
-    &__items {
+    &__list {
         width: 70%;
         display: flex;
     }
