--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -20,9 +20,9 @@
         align-items: center;
     }
 
-    // .services__items
+    // .services__list
 
-    &__items {
+    &__list {
         width: 450px;
     }
 
