adds blog and post components

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,5 @@
 @import 'components/about';
 @import 'components/pluses';
 @import 'components/tasks';
+@import 'components/post';
+@import 'components/blog';
