--- a/css/main.css
+++ b/css/main.css
@@ -607,4 +607,80 @@ body {
   font-size: 16px;
   line-height: 1.5;
 }
+
+.post__wrapper {
+  color: inherit;
+  text-decoration: none;
+}
+
+.post__meta {
+  padding: 25px 24px 27px;
+}
+
+.post__tag {
+  display: inline-block;
+  margin-bottom: 8px;
+  padding: 2px 12px 4px;
+  background-color: #E6F7FF;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.4px;
+  color: #2C90C9;
+}
+
+.post__title {
+  margin-bottom: 11px;
+}
+
+.post__text {
+  margin-bottom: 16px;
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+.post__date {
+  font-size: 12px;
+  line-height: 1.63333;
+}
+
+.blog {
+  padding: 80px 0;
+}
+
+.blog__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 50px;
+}
+
+.blog__all {
+  display: inline-block;
+  padding: 8px 32px;
+  font-size: 17px;
+  line-height: 1.58824;
+  color: #0070A0;
+  text-decoration: none;
+}
+
+.blog__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blog__item {
+  -ms-flex-preferred-size: 33.33333%;
+      flex-basis: 33.33333%;
+}
+
+.blog__item:not(:last-child) {
+  margin-right: 32px;
+}
 /*# sourceMappingURL=main.css.map */
