fixed article link

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -1,9 +1,13 @@
 .post {
+    height: 100%;
 
     // .post__wrapper
 
     &__wrapper {
+        display: inline-block;
+
         color: inherit;
+
         text-decoration: none;
     }
 
