--- a/css/main.css
+++ b/css/main.css
@@ -608,7 +608,12 @@ body {
   line-height: 1.5;
 }
 
+.post {
+  height: 100%;
+}
+
 .post__wrapper {
+  display: inline-block;
   color: inherit;
   text-decoration: none;
 }
