--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,10 @@ body {
   font-weight: 400;
 }
 
+.logo {
+  display: inline-block;
+}
+
 .logo__icon {
   width: 106px;
   height: 37px;
@@ -714,7 +718,7 @@ body {
 }
 
 .get__button {
-  margin-bottom: 12px;
+  margin-bottom: 20px;
 }
 
 .get__list {
@@ -738,5 +742,153 @@ body {
   height: 10px;
   margin-right: 5px;
   stroke: #6D757C;
+}
+
+.information {
+  padding-top: 48px;
+  padding-bottom: 64px;
+}
+
+.information__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.information__contact {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-right: 16px;
+}
+
+.information__logo {
+  margin-bottom: 20px;
+}
+
+.information__contact-text {
+  font-size: 14px;
+  line-height: 1.4;
+}
+
+.information__contact-link {
+  font-size: 13px;
+  line-height: 1.50769;
+  color: #0070A0;
+  text-decoration: none;
+}
+
+.information__menu {
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 16px;
+}
+
+.information__menu-item {
+  width: 50%;
+}
+
+.information__menu-item:not(:last-child) {
+  margin-right: 16px;
+}
+
+.information__heading {
+  font-size: 15px;
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+.information__menu-item .information__heading {
+  margin-bottom: 16px;
+}
+
+.information__form .information__heading {
+  margin-bottom: 12px;
+}
+
+.information__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.information__link {
+  font-size: 14px;
+  line-height: 1.42857;
+  color: #626A72;
+  text-decoration: none;
+}
+
+.information__form {
+  width: 20%;
+}
+
+.information__form-text {
+  margin-bottom: 18px;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.information__form-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.information__form-field {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  position: relative;
+}
+
+.information__input {
+  outline: none;
+  border: none;
+  background: none;
+  font: inherit;
+  width: 100%;
+  padding: 7px 15px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #1F1F1F;
+  border-bottom: 1px solid #C2CDD8;
+}
+
+.information__label {
+  font-size: 13px;
+  line-height: 1.53846;
+  color: #626A72;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  z-index: 1;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  -webkit-transition: all 250ms ease;
+  transition: all 250ms ease;
+}
+
+.information__input:focus + .information__label,
+.information__input:not(:placeholder-shown) + .information__label {
+  -webkit-transform: translate(-15px, -30px);
+          transform: translate(-15px, -30px);
+}
+
+.information__button {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.information__arrow {
+  display: inline-block;
+  width: 11px;
+  height: 20px;
 }
 /*# sourceMappingURL=main.css.map */
