--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,7 @@
 
         background-image: url('../img/hero/hero-photo.png');
         background-repeat: no-repeat;
-        background-position: right;
+        background-position: right 15px center;
         // background-size: contain;
         // background-size: 452px 422px;
     }
