--- a/sass/components/_pluses.scss
+++ b/sass/components/_pluses.scss
@@ -11,6 +11,7 @@
         background-image: url('../img/pluses/pluses-photo.png');
         background-repeat: no-repeat;
         background-size: contain;
+        background-position: 50px;
     }
 
     // .pluses__content
