--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -6,7 +6,7 @@
     &__container {
         background-image: url('../img/services/services-photo.png');
         background-repeat: no-repeat;
-        background-position: bottom -60px right;
+        background-position: bottom -60px right 50px;
         // background-size: contain;
         // background-size: 45%;
         // background-size: 481px 479px;
