--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -44,6 +44,11 @@
         color: #33383F;
 
         text-decoration: none;
+
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+        }
     }
 
     // .header__buttons
