--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -57,6 +57,15 @@
         color: $accentColor;
 
         text-decoration: none;
+
+        &:hover,
+        &:focus {
+            // text-decoration: underline;
+
+            .hero__arrow {
+                transform: translateX(7px);
+            }
+        }   
     }
 
     // .hero__arrow
@@ -65,6 +74,8 @@
         width: 11px;
         height: 20px;
         vertical-align: middle;
+
+        transition: transform 250ms ease-in;
     }
 
     // .hero__photo
